# gdworkflow

./: .gitignore  Dockerfile.bot  Dockerfile.orchestrator  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.opencode/agents/: reviewer.md  subagent.md
.opencode/skills/: clarify-via-discord.md  clarify-via-discord.sh  commit-frequently.md  gdscript-conventions.md  scene-isolation.md
.opencode/skills/brainstorming/: SKILL.md
.opencode/skills/executing-plans/: SKILL.md
.opencode/skills/requesting-code-review/: SKILL.md
.opencode/skills/subagent-driven-development/: SKILL.md  code-quality-reviewer-prompt.md  spec-reviewer-prompt.md
.opencode/skills/using-git-worktrees/: SKILL.md
.opencode/skills/writing-plans/: SKILL.md
.opencode/skills/writing-todos/: SKILL.md
docs/design_docs/: TODO.md  design.md  screenshot_conventions.md
docs/testing/: week3_integration_test_guide.md
fixtures/gdds/: TODO_medium.md  TODO_tetris.md  TODO_trivial.md  TODO_week2_integration.md  TODO_week3_integration.md  complex.md  medium.md  tetris.md  trivial.md
gdworkflow/: gen_todo.py  junit_parser.py  merger.py  orchestrate.py  tscn_parser.py  validate_todo.py
gdworkflow/bot/: main.py
sandbox/: project.godot
sandbox/example_game/scenes/: main.gd.uid
sandbox/scenes/: main.tscn
sandbox/test/: test_example.gd  test_main.gd  test_main.gd.uid
schemas/: todo_frontmatter.json
scripts/: capture_scene.gd  capture_screenshot.sh  run_tests.sh
tests/: test_week1_integration.py  test_week2_integration.py  test_week3_integration.py  test_week4_integration.py
(+446 files in other folders)
