[project]
name = "gdworkflow"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "jsonschema>=4.17",
    "httpx>=0.24",
    "nextcord>=3.0",
    "aiohttp>=3.9",
]

[project.scripts]
gen-todo = "gdworkflow.gen_todo:main"
validate-todo = "gdworkflow.validate_todo:main"
orchestrate = "gdworkflow.orchestrate:main"